[ALLI-4516] Initial version of digi.kansalliskirjasto.fi backend.
Not implemented:

- Record page
- Image popup
- Save record
- /Digi/Home content and translations

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -113,6 +113,9 @@ delete_account_text = "Saved searches and favourite lists are deleted. Any due d
 delete_account_title = "Delete my account"
 description_count = "%%count%% description(s)"
 development_disclaimer = "N.B. This is a development environment. Content and functionality may change at any time without notice."
+digi-journal = "Journals"
+digi-newspaper = "Newspapers"
+digi-printing = "Ephemera"
 Disconnect Library Card = "Disconnect Library Card"
 Dissertation Note = "Dissertation Note"
 Distributors = "Distributors"
@@ -466,6 +469,7 @@ tabs_combined = "Collections and e-materials"
 tabs_local = "Library's collections"
 tabs_metalib = "Nelli searches"
 tabs_pci = "International e-materials"
+tabs_digi = "Digitised materials"
 
 ; Tooltips
 tooltip_tabs_local_html = ""
