--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -113,6 +113,11 @@ delete_account_text = "Tallennetut haut ja suosikkilistat poistetaan sekä mahdo
 delete_account_title = "Poista oma tili"
 description_count = "Kuvauksia %%count%% kpl"
 development_disclaimer = "Huom! Tämä on kehitysympäristö. Sisältö ja toiminnallisuus voivat muuttua milloin tahansa."
+digi-journal = "Aikakauslehdet"
+digi-more-link = "Lisää rajausvaihtoehtoja"
+digi-newspaper = "Sanomalahdet"
+digi-printing = "Pienpainatteet"
+Digi Search = "Kansalliskirjaston digitoitujen aineistojen haku"
 Disconnect Library Card = "Poista kirjastokortti omasta tilistä"
 Dissertation Note = "Opinnäyte"
 Distributors = "Levittäjät"
@@ -466,6 +471,7 @@ tabs_combined = "Kokoelmat ja e-aineistot"
 tabs_local = "Kirjaston kokoelmat"
 tabs_metalib = "Nelli-haut"
 tabs_pci = "Kansainväliset e-aineistot"
+tabs_digi = "Digitoidut aineistot"
 
 ; Tooltips
 tooltip_tabs_local_html = "<h4>Kirjaston/arkiston/museon kokoelmat</h4><p>Kirjaston kokoelmat -välilehdeltä löydät mm. kirjat, e-kirjat, opinnäytteet, lehdet ja tietokannat. Haku kohdistuu samanaikaisesti kirjaston kokoelmiin sekä muihin aktivoituihin aineistoihin.</p><p> Oikean reunan Rajaa hakua -valikon avulla voit rajata hakutulokset kohdistumaan esim. pelkästään tietyn organisaation kokoelmiin tai valitsemiisi aineistotyyppeihin tai uutuuksiin.</p>"
