--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -113,6 +113,9 @@ delete_account_text = "Sparade sökningar och favoritlistor raderas samt påminn
 delete_account_title = "Radera mitt konto"
 description_count = "Beskrivningar %%count%% stk"
 development_disclaimer = "Obs! Systemet är under utveckling. Innehåll och funktioner kan förändras när som helst."
+digi-journal = "Tidskrifter"
+digi-newspaper = "Tidningar"
+digi-printing = "Småtryck"
 Disconnect Library Card = "Bryta bibliotekskort från mitt konto"
 Dissertation Note = "Lärdomsprov"
 Distributors = "Distributörer"
@@ -466,6 +469,7 @@ tabs_combined = "Kollektioner och e-material"
 tabs_local = "Biblioteks kollektioner"
 tabs_metalib = "Nelli-sökningar"
 tabs_pci = "Internationella e-material"
+tabs_digi = "Digitaliserad material"
 
 ; Tooltips
 tooltip_tabs_local_html = ""
