Translations for Eepos (#660)

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -1538,6 +1538,84 @@ format_WorkOfArt/Textile = "Textile"
 1/Blanka/445-73/ = "Utö"
 1/Blanka/445-91/ = "Iniö"
 
+; Eepos
+0/Eepos/ = "Eepos Libraries"
+1/Eepos/1/ = "Seinäjoki"
+2/Eepos/1/001/ = "Seinäjoki Main Library"
+2/Eepos/1/003/ = "Mobile Libraries, storage"
+2/Eepos/1/004/ = "Mobile Library Ilo"
+2/Eepos/1/006/ = "Törnävä Library"
+2/Eepos/1/007/ = "Library in Simunanranta Service Center"
+2/Eepos/1/008/ = "Seinäjoki Upper Secondary School Library"
+2/Eepos/1/009/ = "Peräseinäjoki Library"
+2/Eepos/1/013/ = "Nurmo Library"
+2/Eepos/1/016/ = "Keski-Nurmo Library"
+2/Eepos/1/017/ = "Ylistaro Library"
+2/Eepos/1/018/ = "Mobile Library Ykä"
+1/Eepos/2/ = "Kuortane"
+2/Eepos/2/101/ = "Kuortane Main Library"
+1/Eepos/19/ = "Alavus"
+2/Eepos/19/120/ = "Alavus Main Library"
+2/Eepos/19/121/ = "Mobile Library KirjaVia"
+2/Eepos/19/122/ = "Töysä Library"
+1/Eepos/20/ = "Ähtäri"
+2/Eepos/20/130/ = "Ähtäri Main Library"
+2/Eepos/20/131/ = "Mobile Library Santra"
+1/Eepos/21/ = "Ilmajoki"
+2/Eepos/21/110/ = "Ilmajoki Main Library"
+2/Eepos/21/111/ = "Mobile Library Ilmajoki"
+1/Eepos/23/ = "Alajärvi"
+2/Eepos/23/200/ = "Alajärvi Main Library"
+2/Eepos/23/201/ = "Alajärvi Mobile Library"
+2/Eepos/23/212/ = "Lehtimäki Library"
+1/Eepos/24/ = "Lappajärvi"
+2/Eepos/24/203/ = "Lappajärvi Main Library"
+2/Eepos/24/204/ = "Lappajärvi Mobile Library"
+1/Eepos/25/ = "Evijärvi"
+2/Eepos/25/202/ = "Evijärvi Main Library"
+1/Eepos/26/ = "Soini"
+2/Eepos/26/206/ = "Soini Main Library"
+1/Eepos/27/ = "Veteli"
+2/Eepos/27/209/ = "Veteli Main Library"
+1/Eepos/28/ = "Vimpeli"
+2/Eepos/28/210/ = "Vimpeli Main Library"
+1/Eepos/29/ = "Perho"
+2/Eepos/29/205/ = "Perho Main Library"
+1/Eepos/31/ = "Kurikka"
+2/Eepos/31/300/ = "Kurikka Main Library"
+2/Eepos/31/301/ = "Mobile Library Präntti"
+2/Eepos/31/302/ = "Jurva Library"
+2/Eepos/31/304/ = "Jalasjärvi Library"
+2/Eepos/31/305/ = "Mobile Library Puukstaavi"
+1/Eepos/32/ = "Isojoki"
+2/Eepos/32/307/ = "Isojoki Main Library"
+1/Eepos/33/ = "Karijoki"
+2/Eepos/33/308/ = "Karijoki Main Library"
+2/Eepos/33/309/ = "Myrkky Library"
+1/Eepos/34/ = "Kauhajoki"
+2/Eepos/34/310/ = "Kauhajoki Main Library"
+2/Eepos/34/311/ = "Mobile Library Kauhajoki"
+2/Eepos/34/312/ = "Päntäne Library"
+1/Eepos/35/ = "Teuva"
+2/Eepos/35/323/ = "Teuva Main Library"
+1/Eepos/36/ = "Kaskinen"
+2/Eepos/36/324/ = "Kaskinen Main Library"
+1/Eepos/47/ = "Laihia"
+2/Eepos/47/411/ = "Laihia Main Library"
+2/Eepos/47/412/ = "Mobile Library Laihia"
+1/Eepos/48/ = "Lapua"
+2/Eepos/48/400/ = "Lapua Main Library"
+2/Eepos/48/401/ = "Tiistenjoki Library"
+2/Eepos/48/405/ = "Mobile Library Lapua"
+1/Eepos/49/ = "Isokyrö"
+2/Eepos/49/420/ = "Isojoki Main Library"
+1/Eepos/50/ = "Kauhava"
+2/Eepos/50/402/ = "Kauhava Main Library"
+2/Eepos/50/403/ = "Mobile Library Kauhava"
+2/Eepos/50/413/ = "Ylihärmä Library"
+2/Eepos/50/419/ = "Alahärmä Library"
+2/Eepos/50/422/ = "Kortesjärvi Library"
+
 ; Heili
 0/Heili/ = "Heili Libraries"
 1/Heili/1/ = "Lappeenranta"
@@ -1921,6 +1999,7 @@ format_WorkOfArt/Textile = "Textile"
 2/Lukki/1/008/ = "Virkkala library"
 2/Lukki/1/009/ = "Lohja mobile library Saima"
 2/Lukki/1/010/ = "Lohja mobile library Nuppu"
+2/Lukki/1/015/ = "Ojaniittu library"
 1/Lukki/2/ = "Karkkila"
 2/Lukki/2/014/ = "Karkkila main library"
 1/Lukki/3/ = "Vihti"
@@ -3129,6 +3208,7 @@ source_Alastaron Kuutamokeikka ry = "Alastaron Kuutamokeikka ry"
 source_Blanka = "Blanka libraries"
 source_CENTRIA = "Centria-kirjasto"
 source_Designmuseo = "Design Museum"
+source_Eepos = "Eepos Libraries"
 source_ETELÄ-KARJALAN MUSEO/EKM = "Lappeenranta museums"
 source_Emil Cedercreutzin museo = "Emil Cedercreutzin museo"
 source_Espoon kaupunginmuseo = "Espoo City Museum"
@@ -3227,6 +3307,8 @@ source_lasipalatsi = "Albumit auki"
 ; Data sources
 ; public libraries
 source_gemini_blanka = "Blanka libraries"
+source_blanka = "Blanka libraries"
+source_eepos = "Eepos Libraries"
 source_heili = "Heili Libraries"
 source_helmet = "Helmet Libraries"
 source_ilmajoki = "Ilmajoki"
