--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -1535,6 +1535,84 @@ format_WorkOfArt/Textile = "Tekstiili"
 1/Blanka/445-73/ = "Utö"
 1/Blanka/445-91/ = "Iniö"
 
+; Eepos
+0/Eepos/ = "Eepos-kirjastot"
+1/Eepos/1/ = "Seinäjoki"
+2/Eepos/1/001/ = "Seinäjoen pääkirjasto"
+2/Eepos/1/003/ = "Kirjastoautot, varasto"
+2/Eepos/1/004/ = "Kirjastoauto Ilo"
+2/Eepos/1/006/ = "Törnävän kirjasto"
+2/Eepos/1/007/ = "Simunanrannan palvelukeskuksen kirjasto"
+2/Eepos/1/008/ = "Seinäjoen lukion kirjasto"
+2/Eepos/1/009/ = "Peräseinäjoen kirjasto"
+2/Eepos/1/013/ = "Nurmon kirjasto"
+2/Eepos/1/016/ = "Keski-Nurmon kirjasto"
+2/Eepos/1/017/ = "Ylistaron kirjasto"
+2/Eepos/1/018/ = "Kirjastoauto Ykä"
+1/Eepos/2/ = "Kuortane"
+2/Eepos/2/101/ = "Kuortaneen pääkirjasto"
+1/Eepos/19/ = "Alavus"
+2/Eepos/19/120/ = "Alavuden pääkirjasto"
+2/Eepos/19/121/ = "Alavuden kirjastoauto"
+2/Eepos/19/122/ = "Töysän kirjasto"
+1/Eepos/20/ = "Ähtäri"
+2/Eepos/20/130/ = "Ähtärin pääkirjasto"
+2/Eepos/20/131/ = "Ähtärin kirjastoauto"
+1/Eepos/21/ = "Ilmajoki"
+2/Eepos/21/110/ = "Ilmajoen pääkirjasto"
+2/Eepos/21/111/ = "Ilmajoen kirjastoauto"
+1/Eepos/23/ = "Alajärvi"
+2/Eepos/23/200/ = "Alajärven pääkirjasto"
+2/Eepos/23/201/ = "Alajärven kirjastoauto"
+2/Eepos/23/212/ = "Lehtimäen kirjasto"
+1/Eepos/24/ = "Lappajärvi"
+2/Eepos/24/203/ = "Lappajärven pääkirjasto"
+2/Eepos/24/204/ = "Lappajärven kirjastoauto"
+1/Eepos/25/ = "Evijärvi"
+2/Eepos/25/202/ = "Evijärven pääkirjasto"
+1/Eepos/26/ = "Soini"
+2/Eepos/26/206/ = "Soinin pääkirjasto"
+1/Eepos/27/ = "Veteli"
+2/Eepos/27/209/ = "Vetelin pääkirjasto"
+1/Eepos/28/ = "Vimpeli"
+2/Eepos/28/210/ = "Vimpelin pääkirjasto"
+1/Eepos/29/ = "Perho"
+2/Eepos/29/205/ = "Perhon pääkirjasto"
+1/Eepos/31/ = "Kurikka"
+2/Eepos/31/300/ = "Kurikan pääkirjasto"
+2/Eepos/31/301/ = "Kirjastoauto Präntti"
+2/Eepos/31/302/ = "Jurvan kirjasto"
+2/Eepos/31/304/ = "Jalasjärven kirjasto"
+2/Eepos/31/305/ = "Kirjastoauto Puukstaavi"
+1/Eepos/32/ = "Isojoki"
+2/Eepos/32/307/ = "Isojoen kirjasto"
+1/Eepos/33/ = "Karijoki"
+2/Eepos/33/308/ = "Karijoen kirjasto"
+2/Eepos/33/309/ = "Myrkyn kirjasto"
+1/Eepos/34/ = "Kauhajoki"
+2/Eepos/34/310/ = "Kauhajoen pääkirjasto"
+2/Eepos/34/311/ = "Kauhajoen kirjastoauto"
+2/Eepos/34/312/ = "Päntäneen kirjasto"
+1/Eepos/35/ = "Teuva"
+2/Eepos/35/323/ = "Teuvan kirjasto"
+1/Eepos/36/ = "Kaskinen"
+2/Eepos/36/324/ = "Kaskisten kirjasto"
+1/Eepos/47/ = "Laihia"
+2/Eepos/47/411/ = "Laihian pääkirjasto"
+2/Eepos/47/412/ = "Laihian kirjastoauto"
+1/Eepos/48/ = "Lapua"
+2/Eepos/48/400/ = "Lapuan Pääkirjasto"
+2/Eepos/48/401/ = "Tiistenjoki"
+2/Eepos/48/405/ = "Lapuan Kirjastoauto"
+1/Eepos/49/ = "Isokyrö"
+2/Eepos/49/420/ = "Isonkyrön pääkirjasto"
+1/Eepos/50/ = "Kauhava"
+2/Eepos/50/402/ = "Kauhavan pääkirjasto"
+2/Eepos/50/403/ = "Kauhavan kirjastoauto"
+2/Eepos/50/413/ = "Ylihärmän kirjasto"
+2/Eepos/50/419/ = "Alahärmän kirjasto"
+2/Eepos/50/422/ = "Kortesjärven kirjasto"
+
 ; Heili
 0/Heili/ = "Heili-kirjastot"
 1/Heili/1/ = "Lappeenranta"
@@ -1919,6 +1997,7 @@ format_WorkOfArt/Textile = "Tekstiili"
 2/Lukki/1/008/ = "Virkkalan kirjasto"
 2/Lukki/1/009/ = "Lohjan kirjastoauto Saima"
 2/Lukki/1/010/ = "Lohjan kirjastoauto Nuppu"
+2/Lukki/1/015/ = "Ojaniittutalon kirjasto"
 1/Lukki/2/ = "Karkkila"
 2/Lukki/2/014/ = "Karkkilan pääkirjasto"
 1/Lukki/3/ = "Vihti"
@@ -3132,6 +3211,7 @@ source_Blanka = "Blanka-kirjastot"
 source_CENTRIA = "Centria-kirjasto"
 source_Designmuseo = "Designmuseo"
 source_ETELÄ-KARJALAN MUSEO/EKM = "Lappeenrannan museot"
+source_Eepos = "Eepos-kirjastot"
 source_Emil Cedercreutzin museo = "Emil Cedercreutzin museo"
 source_Espoon kaupunginmuseo = "Espoon kaupunginmuseo"
 source_Eurajoen Kotiseutuyhdistys = "Eurajoen Kotiseutuyhdistys"
@@ -3229,6 +3309,8 @@ source_lasipalatsi = "Albumit auki"
 ; Data sources
 ; public libraries
 source_gemini_blanka = "Blanka-kirjastot"
+source_blanka = "Blanka-kirjastot"
+source_eepos = "Eepos-kirjastot"
 source_heili = "Heili-kirjastot"
 source_helmet = "Helmet-kirjastot"
 source_ilmajoki = "Ilmajoen kunnankirjasto"
