--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -1532,6 +1532,83 @@ format_WorkOfArt/Textile = "Textil"
 1/Blanka/445-73/ = "Utö"
 1/Blanka/445-91/ = "Iniö"
 
+0/Eepos/ = "Eepos-biblioteken"
+1/Eepos/1/ = "Seinäjoki"
+2/Eepos/1/001/ = "Seinäjoki huvudbibliotek"
+2/Eepos/1/003/ = "Bokbussarna, magasin"
+2/Eepos/1/004/ = "Bokbuss Ilo"
+2/Eepos/1/006/ = "Törnävä bibliotek"
+2/Eepos/1/007/ = "Biblioteket på Simunanranta servicecentral"
+2/Eepos/1/008/ = "Seinäjoki gymnasiums bibliotek"
+2/Eepos/1/009/ = "Peräseinäjoki bibliotek"
+2/Eepos/1/013/ = "Nurmo bibliotek"
+2/Eepos/1/016/ = "Keski-Nurmo bibliotek"
+2/Eepos/1/017/ = "Ylistaro bibliotek"
+2/Eepos/1/018/ = "Bokbuss Ykä"
+1/Eepos/2/ = "Kuortane"
+2/Eepos/2/101/ = "Kuortane huvudbibliotek"
+1/Eepos/19/ = "Alavo"
+2/Eepos/19/120/ = "Alavo Huvudbibliotek"
+2/Eepos/19/121/ = "Bokbuss KirjaVia"
+2/Eepos/19/122/ = "Töysä bibliotek"
+1/Eepos/20/ = "Etseri"
+2/Eepos/20/130/ = "Etseri Huvudbibliotek"
+2/Eepos/20/131/ = "Bokbuss Santra"
+1/Eepos/21/ = "Ilmajoki"
+2/Eepos/21/110/ = "Ilmajoki huvudbibliotek"
+2/Eepos/21/111/ = "Bokbuss Ilmajoki"
+1/Eepos/23/ = "Alajärvi"
+2/Eepos/23/200/ = "Alajärvi huvudbibliotek"
+2/Eepos/23/201/ = "Alajärvi bokbuss"
+2/Eepos/23/212/ = "Lehtimäki bibliotek"
+1/Eepos/24/ = "Lappajärvi"
+2/Eepos/24/203/ = "Lappajärvi huvudbibliotek"
+2/Eepos/24/204/ = "Lappajärvi bokbuss"
+1/Eepos/25/ = "Evijärvi"
+2/Eepos/25/202/ = "Evijärvi huvudbibliotek"
+1/Eepos/26/ = "Soini"
+2/Eepos/26/206/ = "Soini huvudbibliotek"
+1/Eepos/27/ = "Vetil"
+2/Eepos/27/209/ = "Vetil huvudbibliotek"
+1/Eepos/28/ = "Vimpeli"
+2/Eepos/28/210/ = "Vimpeli huvudbibliotek"
+1/Eepos/29/ = "Perho"
+2/Eepos/29/205/ = "Perho huvudbibliotek"
+1/Eepos/31/ = "Kurikka"
+2/Eepos/31/300/ = "Kurikka huvudbibliotek"
+2/Eepos/31/301/ = "Bokbuss Präntti"
+2/Eepos/31/302/ = "Jurva bibliotek"
+2/Eepos/31/304/ = "Jalasjärvi bibliotek"
+2/Eepos/31/305/ = "Bokbuss Puukstaavi"
+1/Eepos/32/ = "Isojoki"
+2/Eepos/32/307/ = "Isojoki huvudbibliotek"
+1/Eepos/33/ = "Karijoki"
+2/Eepos/33/308/ = "Karijoki huvudbibliotek"
+2/Eepos/33/309/ = "Myrkky bibliotek"
+1/Eepos/34/ = "Kauhajoki"
+2/Eepos/34/310/ = "Kauhajoki huvudbibliotek"
+2/Eepos/34/311/ = "Bokbuss Kauhajoki"
+2/Eepos/34/312/ = "Päntäne bibliotek"
+1/Eepos/35/ = "Teuva"
+2/Eepos/35/323/ = "Östermark huvudbibliotek"
+1/Eepos/36/ = "Kaskö"
+2/Eepos/36/324/ = "Kaskö huvudbibliotek"
+1/Eepos/47/ = "Laihia"
+2/Eepos/47/411/ = "Laihia huvudbibliotek"
+2/Eepos/47/412/ = "Bokbuss Laihia"
+1/Eepos/48/ = "Lapua"
+2/Eepos/48/400/ = "Lapua huvudbibliotek"
+2/Eepos/48/401/ = "Tiistenjoki bibliotek"
+2/Eepos/48/405/ = "Bokbuss Lapua"
+1/Eepos/49/ = "Isokyrö"
+2/Eepos/49/420/ = "Isokyrö huvudbibliotek"
+1/Eepos/50/ = "Kauhava"
+2/Eepos/50/402/ = "Kauhava huvudbibliotek"
+2/Eepos/50/403/ = "Bokbuss Kauhava"
+2/Eepos/50/413/ = "Ylihärmä bibliotek"
+2/Eepos/50/419/ = "Alihärmä bibliotek"
+2/Eepos/50/422/ = "Kortesjärvi bibliotek"
+
 ; Heili
 0/Heili/ = "Heili-biblioteken"
 1/Heili/1/ = "Villmanstrand"
@@ -1915,6 +1992,7 @@ format_WorkOfArt/Textile = "Textil"
 2/Lukki/1/008/ = "Virkby bibliotek"
 2/Lukki/1/009/ = "Lojo bokbus Saima"
 2/Lukki/1/010/ = "Lojo bokbus Nuppu"
+2/Lukki/1/015/ = "Ojaniittu bibliotek"
 1/Lukki/2/ = "Högfors"
 2/Lukki/2/014/ = "Högfors huvudbibliotek"
 1/Lukki/3/ = "Vichtis"
@@ -3126,6 +3204,7 @@ source_Alastaron Kuutamokeikka ry = "Alastaron Kuutamokeikka ry"
 source_Blanka = "Blankabiblioteken"
 source_CENTRIA = "Centria-kirjasto"
 source_Designmuseo = "Designmuseet"
+source_Eepos = "Eepos-biblioteken"
 source_ETELÄ-KARJALAN MUSEO/EKM = "Lappeenrannan museot"
 source_Emil Cedercreutzin museo = "Emil Cedercreutzin museo"
 source_Espoon kaupunginmuseo = "Esbo stadsmuseum"
@@ -3224,6 +3303,8 @@ source_lasipalatsi = "Albumit auki"
 ; Data sources
 ; public libraries
 source_gemini_blanka = "Blankabiblioteken"
+source_blanka = "Blankabiblioteken"
+source_eepos = "Eepos-biblioteken"
 source_heili = "Heili-biblioteken"
 source_helmet = "Helmet-biblioteken"
 source_ilmajoki = "Ilmajoki"
