--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -144,9 +144,12 @@ due_date_reminder_one_day = "Yksi päivä ennen eräpäivää"
 due_date_reminder_three_days = "Kolme päivää ennen eräpäivää"
 due_date_reminder_two_days = "Kaksi päivää ennen eräpäivää"
 due_date_email_error = "Lainojesi eräpäivien tarkistus epäonnistui"
-due_date_email_login_error = "Kaikkia kirjastokorttejasi ei voitu tarkistaa. Kirjaudu sisään klikkaamalla allaolevaa linkkiä ja varmista, että kirjastokorttiesi tiedot ovat oikein. Voit myös peruuttaa eräpäivämuistutusten tilauksen."
+due_date_email_login_error = "Kaikkia kirjastokorttejasi ei voitu tarkistaa tilillä, jota käytit viimeksi %%lastLogin%% kirjautumalla %%loginMethod%%. Kirjaudu sisään klikkaamalla allaolevaa linkkiä ja varmista, että kirjastokorttiesi tiedot ovat oikein. Voit myös peruuttaa eräpäivämuistutusten tilauksen tältä tililtä allaolevasta linkistä."
 due_date_failed_library = "Kirjasto, jonka kortteja ei voitu tarkistaa: "
 due_date_failed_library_multi = "Kirjastot, joiden kortteja ei voitu tarkistaa: "
+due_date_login_method_database = "Finna-tunnuksella"
+due_date_login_method_multiils = "kirjastokortilla"
+due_date_login_method_shibboleth = "HAKA-loginilla"
 edit = "muokkaa"
 EDS Search = "Kansainvälisten e-aineistojen haku"
 Education Programs = "Koulutusohjelmat"
