[ALLI-5023] Improved a bit more the message about not being able to check library card for loans with nearby due date.

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -147,7 +147,7 @@ due_date_reminder_one_day = "One day before due date"
 due_date_reminder_three_days = "Three days before due date"
 due_date_reminder_two_days = "Two days before due date"
 due_date_email_error = "Failed to check due dates of your loans"
-due_date_email_login_error = "We couldn't verify all of your library cards for an account you last used %%lastLogin%% by logging in with %%loginMethod%%. Please log in by clicking on the link below and verify that all of the information associated with your library cards is correct. You can also cancel due date reminders for this account with the link below."
+due_date_email_login_error = "We couldn't verify all of your library cards for an account you last used %%lastLogin%% by logging in with %%loginMethod%%. Please log in by clicking on the link below and verify that all of the information associated with your library cards is correct. You can also cancel due date reminders for this account with the link at the end of the message."
 due_date_failed_library = "We couldn't verify your library cards for the following library: "
 due_date_failed_library_multi = "We couldn't verify your library cards for the following libraries: "
 due_date_login_method_database = "a Finna ID"
