--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -144,7 +144,7 @@ due_date_reminder_one_day = "En dag före förfallodagen"
 due_date_reminder_three_days = "Tre dagar före förfallodagen"
 due_date_reminder_two_days = "Två dagar före förfallodagen"
 due_date_email_error = "Mislyckades at kontrollera förfallodagar av dina lån"
-due_date_email_login_error = "Det gick inte att kontrollera alla dina bibliotekskort med kontot du har senast använt %%lastLogin%% med %%loginMethod%%. Logga in genom länken nedan för att se om uppgifterna för dina bibliotekskort är korrekta. Du kan också inaktivera påminnelsen om återlämningsdatum för detta användarkonto med länken nedanför."
+due_date_email_login_error = "Det gick inte att kontrollera alla dina bibliotekskort med kontot du har senast använt %%lastLogin%% med %%loginMethod%%. Logga in genom länken nedan för att se om uppgifterna för dina bibliotekskort är korrekta. Du kan också inaktivera påminnelsen om återlämningsdatum för detta användarkonto med länken i slutet av meddelandet."
 due_date_failed_library = "Kortet vid följande bibliotek kunde inte kontrolleras: "
 due_date_failed_library_multi = "Korten vid följande biblioteken kunde inte kontrolleras: "
 due_date_login_method_database = "ett Finna-konto"
