Fixed the error message displayed if a Shibboleth login failed due to invalid user attributes and added a better log message for further diagnosis.

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -29,6 +29,7 @@ Archive Series = "Archive Series"
 Archives = "Archives"
 Aspect Ratio = "Aspect Ratio"
 Assistants = "Assistants"
+authentication_error_invalid_attributes = "Your user account does not have permission to access the service. Login failed."
 authorize_user_notification = "You may get more search results by logging in with institutional credentials."
 autocomplete_handler_author = "Search in authors"
 autocomplete_handler_title = "Search in titles"
