--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -29,6 +29,7 @@ Archive Series = "Kuuluu sarjaan"
 Archives = Arkistot
 Aspect Ratio = "Kuvasuhde"
 Assistants = "Avustajat"
+authentication_error_invalid_attributes = "Käyttäjätunnuksellasi ei ole käyttöoikeutta palveluun. Sisäänkirjautuminen epäonnistui."
 authorize_user_notification = "Voit saada enemmän hakutuloksia kirjautumalla korkeakoulun tunnuksilla."
 autocomplete_handler_author = "Hae tekijöistä"
 autocomplete_handler_title = "Hae otsikoista"
@@ -144,7 +145,7 @@ due_date_reminder_one_day = "Yksi päivä ennen eräpäivää"
 due_date_reminder_three_days = "Kolme päivää ennen eräpäivää"
 due_date_reminder_two_days = "Kaksi päivää ennen eräpäivää"
 due_date_email_error = "Lainojesi eräpäivien tarkistus epäonnistui"
-due_date_email_login_error = "Kaikkia kirjastokorttejasi ei voitu tarkistaa tilillä, jota käytit viimeksi %%lastLogin%% kirjautumalla %%loginMethod%%. Kirjaudu sisään klikkaamalla allaolevaa linkkiä ja varmista, että kirjastokorttiesi tiedot ovat oikein. Voit myös peruuttaa eräpäivämuistutusten tilauksen tältä tililtä viestin lopusta löytyvällä linkillä."
+due_date_email_login_error = "Kaikkia kirjastokorttejasi ei voitu tarkistaa tilillä, jota käytit viimeksi %%lastLogin%% kirjautumalla %%loginMethod%%. Tällaisten korttien eräpäivämuistutukset on kytketty pois käytöstä. Mikäli et tunnista tätä tiliä, ei tämä viesti edellytä lisätoimia. Muussa tapauksessa voit kytkeä eräpäivämuistutukset takaisin päälle kirjauduttuasi palveluun."
 due_date_failed_library = "Kirjasto, jonka kortteja ei voitu tarkistaa: "
 due_date_failed_library_multi = "Kirjastot, joiden kortteja ei voitu tarkistaa: "
 due_date_login_method_database = "Finna-tunnuksella"
