--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -29,6 +29,7 @@ Archive Series = "Arkivserie"
 Archives = Arkiv
 Aspect Ratio = "Bildförhållande"
 Assistants = "Assistenter"
+authentication_error_invalid_attributes = "Ditt användarkonto har inte tillgång till tjänsten. Inloggningen misslyckades."
 authorize_user_notification = "Du kan få fler sökresultat genom att logga in med högskolans användarnamn."
 autocomplete_handler_author = "Sök bland upphovsman"
 autocomplete_handler_title = "Sök bland titlar"
