--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -3286,6 +3286,7 @@ format_WorkOfArt/Textile = "Textile"
 2/MPKK/mpkk/2/ = "not for home loan"
 1/MPKK/maask/ = "Army Academy Library"
 2/MPKK/maask/1/ = "for home loan"
+1/doria_mpkk/ = "Institutional Repository"
 
 ; Tamcat - TAY
 0/TAY/ = University of Tampere
@@ -4096,6 +4097,7 @@ source_aaltodoc = "Aalto University - Aaltodoc"
 source_doria = "National Library - Doria"
 source_doria_elmeri = "Metropolia - Elmeri"
 source_doria_lut = "Lappeenranta University of Technology - Doria"
+source_doria_mpkk = "National Defence University - Doria"
 source_doria_taiy = "University of the Arts Helsinki - Doria"
 source_doria_ty = "University of Turku - Doria"
 source_taiy_helda = "University of the Arts Helsinki - Helda"
