--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -3285,6 +3285,7 @@ format_WorkOfArt/Textile = "Tekstiili"
 2/MPKK/mpkk/2/ = "ei lainattavat"
 1/MPKK/maask/ = "Maasotakoulun kirjasto"
 2/MPKK/maask/1/ = "lainattavat"
+1/doria_mpkk/ = "Julkaisuarkisto"
 
 ; Tamcat - TAY
 0/TAY/ = Tampereen yliopisto
@@ -4099,6 +4100,7 @@ source_aaltodoc = "Aalto-yliopisto - Aaltodoc"
 source_doria = "Kansalliskirjasto - Doria"
 source_doria_elmeri = "Metropolia - Elmeri"
 source_doria_lut = "Lappeenrannan teknillinen yliopisto - LUTPub"
+source_doria_mpkk = "Maanpuolustuskorkeakoulu - Doria"
 source_doria_taiy = "Taideyliopisto - Doria"
 source_doria_ty = "Turun yliopisto - Doria"
 source_helda_taiy = "Taideyliopisto - Helda"
