--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -3273,6 +3273,7 @@ format_WorkOfArt/Textile = "Textil"
 2/MPKK/mpkk/2/ = "ej lånbara"
 1/MPKK/maask/ = "Marksstridsskolans biblioteket"
 2/MPKK/maask/1/ = "lånbara"
+1/MPKK/doria_mpkk/ = "Doria"
 
 ; Tamcat - TAY
 0/TAY/ = University of Tampere
@@ -4086,6 +4087,7 @@ source_aaltodoc = "Aalto-universitetet - Aaltodoc"
 source_doria = "Nationalbiblioteket - Doria"
 source_doria_elmeri = "Metropolia - Elmeri"
 source_doria_lut = "Lappeenrannan teknillinen yliopisto - LUTPub"
+source_doria_mpkk = "Försvarshögskolan - Doria"
 source_doria_taiy = "Konstuniversitetet - Doria"
 source_doria_ty = "Åbo universitet - Doria"
 source_helda_taiy = "Konstuniversitetet - Helda"
