--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -117,6 +117,8 @@ collection_author = "Listan tekijä"
 Collection Details = "Kokoelman tarkemmat tiedot"
 Color = "Väri"
 comment_login = "lähettääksesi kommentin"
+comment_name = "Nimimerkki"
+comment_name_info = "Nimimerkki, joka näkyy kirjoittamissasi arvioissa"
 component_part_is_part_of = "Sisältyy julkaisuun"
 component_parts_entries_on_page = "Näytetään _START_ - _END_ / _TOTAL_"
 component_parts_filter = "Suodata"
