[ALLI-4659] [ALLI-4600] Support for configurable email forms.

--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -4,6 +4,9 @@ Access Restrictions = "Käyttöoikeudet"
 Actions = "Toiminnot"
 Active filters = "Rajauksia voimassa"
 Actors = "Näyttelijät"
+Acquisition Request = "Hankintaehdotus"
+acquisition_request_place_hold = "Haluan varata teoksen, mikäli se hankitaan kirjastoon"
+acquisition_request_title = "Teoksen nimi"
 Add a Note = "Lisää kuvaus"
 Add list description = "Lisää listan kuvaus"
 Add note = "Lisää kuvaus"
@@ -128,6 +131,7 @@ confirm_dialog_cancel = "Peruuta"
 confirm_new_password = "Toista uusi salasana / PIN"
 Connect Library Card = "Liitä kirjastokortti/rinnakkaiskortti"
 contact_details_instructions = ""
+Contact Information = "Yhteystiedot"
 content-feed-navigation = "Muut artikkelit"
 Contents/Parts = "Sisältö/kappaleet"
 Copy has special circulation = "Nide on nopeakierrossa"
@@ -346,6 +350,7 @@ new_items_7days = "Viimeisin vko"
 new_items_from = "Alkaen"
 new_password = "Uusi salasana / PIN*"
 Newest Results = "uusinta tulosta"
+No = "Ei"
 No Holdings Available = "Ei saatavuustietoja"
 no_email_address = "Sähköpostiosoite puuttuu."
 no_email_address_text = "Lisää sähköpostiosoite kirjaston ylläpitämiin asiakastietoihin."
@@ -656,6 +661,7 @@ Year = "Vuosi"
 year_from = "Alkaen vuodesta"
 year_to = "Loppuen vuoteen"
 year_slider = "Rajaa vuosijanalla"
+Yes = "Kyllä"
 your_account_info = "Suosikit, tallennetut haut ja omat tiedot"
 You do not have any items in the checkout history = "Ei tietoja lainaushistoriassa"
 Your book bag is empty = "Kori on tyhjä"
