added check for nickname and possibility to change nickname and it is shown in reviews if set

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -219,6 +219,8 @@ fines_instructions_html = ""
 Finna Login = "Finna ID"
 Finna Password = "Password"
 finna_new_password_instructions_html = ""
+finna_nickname = "Nickname"
+finna_nickname_info = "Nickname, that is shown in your rewievs"
 finna_survey_title = "Take the Finna survey!"
 finna_survey_text = "Win a Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Start"
@@ -474,6 +476,7 @@ Production = "Production"
 Production Costs = "Production costs"
 profile_instructions = ""
 profile_update_failed = "Your profile could not be updated"
+profile_update_failed_nickname = "Nickname is taken"
 Projected Publication Date = "Projected Publication Date"
 Public Libraries = "Public libraries"
 Public List URL = "Public list link"
