--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -117,8 +117,6 @@ collection_author = "Listan tekijä"
 Collection Details = "Kokoelman tarkemmat tiedot"
 Color = "Väri"
 comment_login = "lähettääksesi kommentin"
-comment_name = "Nimimerkki"
-comment_name_info = "Nimimerkki, joka näkyy kirjoittamissasi arvioissa"
 component_part_is_part_of = "Sisältyy julkaisuun"
 component_parts_entries_on_page = "Näytetään _START_ - _END_ / _TOTAL_"
 component_parts_filter = "Suodata"
@@ -218,6 +216,8 @@ fines_instructions_html = ""
 Finna Login = "Finna-tunnus"
 Finna Password = "Salasana"
 finna_new_password_instructions_html = ""
+finna_nickname = "Nimimerkki"
+finna_nickname_info = "Nimimerkki, joka näkyy kirjoittamissasi arvosteluissa"
 finna_survey_title = "Vastaa kyselyyn Finnasta!"
 finna_survey_text = "Voita Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Avaa kysely"
@@ -473,6 +473,7 @@ Production = "Tuotanto"
 Production Costs = "Tuotantokustannukset"
 profile_instructions = ""
 profile_update_failed = "Käyttäjäprofiilisi päivitys epäonnistui"
+profile_update_failed_nickname = "Nimimerkki on jo käytössä"
 Projected Publication Date = "Arvioitu julkaisuaika"
 Public Libraries = "Yleiset kirjastot"
 Public List URL = "Listan julkinen linkki"
