--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -216,6 +216,8 @@ fines_instructions_html = ""
 Finna Login = "Finna-konto"
 Finna Password = "Lösenord"
 finna_new_password_instructions_html = ""
+finna_nickname = "Nimimerkki"
+finna_nickname_info = "Nimimerkki, joka näkyy kirjoittamissasi arvosteluissa"
 finna_survey_title = "Svara på enkäten om Finna!"
 finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Svara"
@@ -471,6 +473,7 @@ Production = "Produktion"
 Production Costs = "Produktionskostnader"
 profile_instructions = ""
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
+profile_update_failed_nickname = "Nimimerkki on jo käytössä"
 Projected Publication Date = "Beräknat utgivningsdatum"
 Public Libraries = "Allmänna bibliotek"
 Public List URL = "Offentlig länk till lista"
