added switch-case operation for email / nickname changing

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -221,7 +221,7 @@ Finna Login = "Finna ID"
 Finna Password = "Password"
 finna_new_password_instructions_html = ""
 finna_nickname = "Nickname"
-finna_nickname_info = "Nickname, that is shown in your rewievs"
+finna_nickname_info = "Nickname, that is shown in the reviews you have written"
 finna_survey_title = "Take the Finna survey!"
 finna_survey_text = "Win a Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Start"
@@ -480,8 +480,10 @@ primo_no_searchword = "Search of international e-material does not allow queries
 Production = "Production"
 Production Costs = "Production costs"
 profile_instructions = ""
+profile_update_email = "Your email address is updated"
 profile_update_failed = "Your profile could not be updated"
-profile_update_failed_nickname = "Nickname is taken"
+profile_update_failed_nickname = "Nickname is alredy taken"
+profile_update_nickname = "Your nickname is updated"
 Projected Publication Date = "Projected Publication Date"
 Public Libraries = "Public libraries"
 Public List URL = "Public list link"
