--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -476,8 +476,10 @@ primo_no_searchword = "Kansainvälisistä e-aineistoista ei voi hakea ilman haku
 Production = "Tuotanto"
 Production Costs = "Tuotantokustannukset"
 profile_instructions = ""
+profile_update_email = "Sähköpostiosoitteesi päivitys onnistui"
 profile_update_failed = "Käyttäjäprofiilisi päivitys epäonnistui"
 profile_update_failed_nickname = "Nimimerkki on jo käytössä"
+profile_update_nickname = "Nimimerkkisi on vaihdettu onnistuneesti"
 Projected Publication Date = "Arvioitu julkaisuaika"
 Public Libraries = "Yleiset kirjastot"
 Public List URL = "Listan julkinen linkki"
