--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -216,8 +216,8 @@ fines_instructions_html = ""
 Finna Login = "Finna-konto"
 Finna Password = "Lösenord"
 finna_new_password_instructions_html = ""
-finna_nickname = "Nimimerkki"
-finna_nickname_info = "Nimimerkki, joka näkyy kirjoittamissasi arvosteluissa"
+finna_nickname = "Smeknamn"
+finna_nickname_info = "Smeknamn, som visas i de recensioner du har skrivit"
 finna_survey_title = "Svara på enkäten om Finna!"
 finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Svara"
@@ -476,8 +476,10 @@ primo_no_searchword = "Internationella e-material sökning tillåter inte sökni
 Production = "Produktion"
 Production Costs = "Produktionskostnader"
 profile_instructions = ""
+profile_update_email = "Din e-postadress är uppdaterad"
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
-profile_update_failed_nickname = "Nimimerkki on jo käytössä"
+profile_update_failed_nickname = "Smeknamn är redan tagit"
+profile_update_nickname = "Ditt smeknamn är uppdaterat"
 Projected Publication Date = "Beräknat utgivningsdatum"
 Public Libraries = "Allmänna bibliotek"
 Public List URL = "Offentlig länk till lista"
