made code better

--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -217,7 +217,7 @@ Finna Login = "Finna-konto"
 Finna Password = "Lösenord"
 finna_new_password_instructions_html = ""
 finna_nickname = "Smeknamn"
-finna_nickname_info = "Smeknamn, som visas i de recensioner du har skrivit"
+finna_nickname_info = "Smeknamn, som visas i de recensioner och offentliga listor"
 finna_survey_title = "Svara på enkäten om Finna!"
 finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Svara"
@@ -478,6 +478,7 @@ Production Costs = "Produktionskostnader"
 profile_instructions = ""
 profile_update_email = "Din e-postadress är uppdaterad"
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
+profile_update_failed_email = "Din e-postadress kunde inte uppdateras"
 profile_update_failed_nickname = "Smeknamn är redan tagit"
 profile_update_nickname = "Ditt smeknamn är uppdaterat"
 Projected Publication Date = "Beräknat utgivningsdatum"
