--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -221,7 +221,7 @@ Finna Login = "Finna ID"
 Finna Password = "Password"
 finna_new_password_instructions_html = ""
 finna_nickname = "Nickname"
-finna_nickname_info = "Nickname, that is shown in the reviews you have written"
+finna_nickname_info = "Nickname, that is shown in the reviews and public lists"
 finna_survey_title = "Take the Finna survey!"
 finna_survey_text = "Win a Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Start"
@@ -482,6 +482,7 @@ Production Costs = "Production costs"
 profile_instructions = ""
 profile_update_email = "Your email address is updated"
 profile_update_failed = "Your profile could not be updated"
+profile_update_failed_email = "Your email address could not be updated"
 profile_update_failed_nickname = "Nickname is alredy taken"
 profile_update_nickname = "Your nickname is updated"
 Projected Publication Date = "Projected Publication Date"
