refactored code, added html and php check for regex

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -222,6 +222,7 @@ Finna Password = "Password"
 finna_new_password_instructions_html = ""
 finna_nickname = "Nickname"
 finna_nickname_info = "Nickname, that is shown in the reviews and public lists"
+finna_nickname_restrictions = "Nickname is 3-24 characters long and it can contain numbers, letters, dots and underscores"
 finna_survey_title = "Take the Finna survey!"
 finna_survey_text = "Win a Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Start"
@@ -482,9 +483,10 @@ Production Costs = "Production costs"
 profile_instructions = ""
 profile_update_email = "Your email address is updated"
 profile_update_failed = "Your profile could not be updated"
-profile_update_failed_email = "Your email address could not be updated"
-profile_update_failed_nickname = "Nickname is alredy taken"
+profile_update_invalid_email = "Your email address could not be updated"
+profile_update_invalid_nickname = "Nickname is alredy taken"
 profile_update_nickname = "Your nickname is updated"
+profile_update_none = "No changes"
 Projected Publication Date = "Projected Publication Date"
 Public Libraries = "Public libraries"
 Public List URL = "Public list link"
