--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -218,6 +218,7 @@ Finna Password = "Salasana"
 finna_new_password_instructions_html = ""
 finna_nickname = "Nimimerkki"
 finna_nickname_info = "Nimimerkki, näkyvillä arvosteluissa sekä julkisissa listoissa"
+finna_nickname_restrictions = "Nimimerkin tulee olla 3-24 merkkiä pitkä ja se voi sisältää numeroita, kirjaimia, pisteen ja alaviivan"
 finna_survey_title = "Vastaa kyselyyn Finnasta!"
 finna_survey_text = "Voita Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Avaa kysely"
@@ -478,9 +479,10 @@ Production Costs = "Tuotantokustannukset"
 profile_instructions = ""
 profile_update_email = "Sähköpostiosoitteesi päivitys onnistui"
 profile_update_failed = "Käyttäjäprofiilisi päivitys epäonnistui"
-profile_update_failed_email = "Sähköpostiosoitteesi päivitys epäonnistui"
-profile_update_failed_nickname = "Nimimerkki on jo käytössä tai se on virheellinen"
+profile_update_invalid_email = "Sähköpostiosoitteesi päivitys epäonnistui"
+profile_update_invalid_nickname = "Nimimerkki on jo käytössä"
 profile_update_nickname = "Nimimerkkisi päivitys onnistui"
+profile_update_none = "Ei muutoksia"
 Projected Publication Date = "Arvioitu julkaisuaika"
 Public Libraries = "Yleiset kirjastot"
 Public List URL = "Listan julkinen linkki"
