--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -218,6 +218,7 @@ Finna Password = "Lösenord"
 finna_new_password_instructions_html = ""
 finna_nickname = "Smeknamn"
 finna_nickname_info = "Smeknamn, som visas i de recensioner och offentliga listor"
+finna_nickname_restrictions = "Smeknamn kan vara 3-24 karaktär långt och innehålla antal, bokstäver, punkt och understreck"
 finna_survey_title = "Svara på enkäten om Finna!"
 finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Svara"
@@ -478,9 +479,10 @@ Production Costs = "Produktionskostnader"
 profile_instructions = ""
 profile_update_email = "Din e-postadress är uppdaterad"
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
-profile_update_failed_email = "Din e-postadress kunde inte uppdateras"
-profile_update_failed_nickname = "Smeknamn är redan tagit"
+profile_update_invalid_email = "Din e-postadress kunde inte uppdateras"
+profile_update_invalid_nickname = "Smeknamn är redan tagit"
 profile_update_nickname = "Ditt smeknamn är uppdaterat"
+profile_update_none = "Inte ändringar"
 Projected Publication Date = "Beräknat utgivningsdatum"
 Public Libraries = "Allmänna bibliotek"
 Public List URL = "Offentlig länk till lista"
