--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -223,8 +223,8 @@ Finna Login = "Finna-konto"
 Finna Password = "Lösenord"
 finna_new_password_instructions_html = ""
 finna_nickname = "Smeknamn"
-finna_nickname_info = "Smeknamn, som visas i de recensioner och offentliga listor"
-finna_nickname_restrictions = "Smeknamn kan vara 3-24 karaktär långt och innehålla antal, bokstäver, punkt och understreck"
+finna_nickname_info = "Smeknamn, som visas i recensioner och offentliga listor"
+finna_nickname_restrictions = "Smeknamn kan vara 3-24 karaktär långt och innehålla nummer, bokstäver, punkter och understreck"
 finna_survey_title = "Svara på enkäten om Finna!"
 finna_survey_text = "Vinn en Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Svara"
@@ -488,11 +488,11 @@ primo_no_searchword = "Internationella e-material sökning tillåter inte sökni
 Production = "Produktion"
 Production Costs = "Produktionskostnader"
 profile_instructions = ""
-profile_update_email = "Din e-postadress är uppdaterad"
+profile_update_email = "Din e-postadress har uppdaterads"
 profile_update_failed = "Din användarprofil kunde inte uppdateras"
 profile_update_invalid_email = "Din e-postadress kunde inte uppdateras"
 profile_update_invalid_nickname = "Smeknamn är redan tagit"
-profile_update_nickname = "Ditt smeknamn är uppdaterat"
+profile_update_nickname = "Ditt smeknamn har uppdaterats"
 profile_update_none = "Inte ändringar"
 Projected Publication Date = "Beräknat utgivningsdatum"
 Public Libraries = "Allmänna bibliotek"
