--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -224,7 +224,7 @@ Finna Password = "Salasana"
 finna_new_password_instructions_html = ""
 finna_nickname = "Nimimerkki"
 finna_nickname_info = "Nimimerkki, näkyvillä arvosteluissa sekä julkisissa listoissa"
-finna_nickname_restrictions = "Nimimerkin tulee olla 3-24 merkkiä pitkä ja se voi sisältää numeroita, kirjaimia, pisteen ja alaviivan"
+finna_nickname_restrictions = "Nimimerkin tulee olla 3-24 merkkiä pitkä ja se voi sisältää numeroita, kirjaimia, pisteitä ja alaviivoja"
 finna_survey_title = "Vastaa kyselyyn Finnasta!"
 finna_survey_text = "Voita Samsung Galaxy Tab S2 9.7"
 finna_survey_btn_ok = "Avaa kysely"
@@ -488,11 +488,11 @@ primo_no_searchword = "Kansainvälisistä e-aineistoista ei voi hakea ilman haku
 Production = "Tuotanto"
 Production Costs = "Tuotantokustannukset"
 profile_instructions = ""
-profile_update_email = "Sähköpostiosoitteesi päivitys onnistui"
+profile_update_email = "Sähköpostiosoitteesi on päivitetty"
 profile_update_failed = "Käyttäjäprofiilisi päivitys epäonnistui"
 profile_update_invalid_email = "Sähköpostiosoitteesi päivitys epäonnistui"
 profile_update_invalid_nickname = "Nimimerkki on jo käytössä"
-profile_update_nickname = "Nimimerkkisi päivitys onnistui"
+profile_update_nickname = "Nimimerkkisi on päivitetty"
 profile_update_none = "Ei muutoksia"
 Projected Publication Date = "Arvioitu julkaisuaika"
 Public Libraries = "Yleiset kirjastot"
