--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -4311,6 +4311,7 @@ source_lakia = "Lakia-biblioteken"
 source_lukki = "Lukki-biblioteken"
 source_luumaki = "Luumäki"
 source_oiva = "Oiva-biblioteken"
+source_outi = "OUTI-biblioteken"
 source_piki = "PIKI-biblioteken"
 source_rutakko = "Rutakko-biblioteken"
 source_satakirjastot = "Sata-biblioteken"
