KohaRest: add mapping for HE fee type. Add and fix fine status translations.

--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -2208,9 +2208,12 @@ order_status_Received Complete = "Item received by the library"
 
 ; Fine statuses
 fine_status_Accrued Fine = "Accrued fine"
+fine_status_Hold Expired = "Expired hold"
+fine_status_Hold Fee = "Hold fee"
 fine_status_Lost Item Replacement = "Replacement of a lost item"
 fine_status_Lost Item Processing = "Processing fee for a lost item"
 fine_status_Media Booking Usage Fee = "Reservation charge"
+fine_status_New Card = "Uusi kirjastokortti"
 fine_status_Overdue = "Overdue fee"
 
 ; Opac messages (Helmet)
