--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -2025,9 +2025,12 @@ order_status_Received Complete = "Tilattu aineisto on saapunut kirjastoon"
 
 ; Fine statuses
 fine_status_Accrued Fine = "Kertyvä myöhästymismaksu"
+fine_status_Hold Expired = "Noutamaton varaus"
+fine_status_Hold Fee = "Varausmaksu"
 fine_status_Lost Item Replacement = "Kadonneen aineiston korvaus"
 fine_status_Lost Item Processing = "Kadonneen aineiston käsittelymaksu"
 fine_status_Media Booking Usage Fee = "Varausmaksu"
+fine_status_New Card = "Uusi kirjastokortti"
 fine_status_Overdue = "Myöhästymismaksu"
 
 ; Opac messages (Helmet)
