--- a/local/languages/finna/sv.ini
+++ b/local/languages/finna/sv.ini
@@ -1524,11 +1524,14 @@ order_status_Pending = "Beställd"
 order_status_Received Complete = "Beställt material har anlänt till biblioteket"
 
 ; Fine statuses
-status_Accrued Fine = "Upplupen avgift"
-status_Lost Item Replacement = "Ersättning av försvunnet material"
-status_Lost Item Processing = "Hanteringsavgift för försvunnet material"
-status_Media Booking Usage Fee = "Reserveringsavgift"
-status_Overdue = "Förseningsavgift"
+fine_status_Accrued Fine = "Upplupen avgift"
+fine_status_Hold Expired = "Ohämtad reservering"
+fine_status_Hold Fee = "Reserveringsavgift"
+fine_status_Lost Item Replacement = "Ersättning av försvunnet material"
+fine_status_Lost Item Processing = "Hanteringsavgift för försvunnet material"
+fine_status_Media Booking Usage Fee = "Reserveringsavgift"
+fine_status_New Card = "Nytt bibliotekskort"
+fine_status_Overdue = "Förseningsavgift"
 
 ; Opac message (Helmet)
 opacmsg_helmet_e = "Reserveras ej"
