[ALLI-4450] Improve account expiration reminder translations.

--- a/local/languages/finna/fi.ini
+++ b/local/languages/finna/fi.ini
@@ -3,6 +3,9 @@
 accept_request_terms_html = "Hyväksyn käyttöehdot"
 Access Restrictions = "Käyttöoikeudet"
 account_expiration_body = "Hei %%firstname%%! Käyttäjätunnuksesi, joka sisältää mm. suosikkilistat ja tallennetut haut, on vanhentumassa %%expirationDate%%. Mikäli et käytä tätä tiliä, ei tämä viesti edellytä lisätoimia. Muussa tapauksessa voit jatkaa käyttäjätunnuksesi voimassaoloa helposti kirjautumalla sisään %%loginMethod%% osoitteessa %%serviceAddress%% ennen tilin vanhentumista."
+account_expiration_login_method_database = "Finna-tunnuksellasi"
+account_expiration_login_method_multiils = "kirjastokortillasi"
+account_expiration_login_method_shibboleth = "HAKA-loginilla"
 account_expiration_subject = "Käyttäjätunnuksesi palvelussa %%serviceAddress%% vanhenee %%expirationDate%%"
 Actions = "Toiminnot"
 Active filters = "Rajauksia voimassa"
