--- a/local/languages/finna/en-gb.ini
+++ b/local/languages/finna/en-gb.ini
@@ -2,7 +2,10 @@
 
 accept_request_terms_html = "I agree to the terms and conditions"
 Access Restrictions = "Access Conditions"
-account_expiration_body = "Dear %%firstname%%, Your account, which contains your favourite lists and saved searches, is about to expire at %%expirationDate%%. If you don't use this account, you can ignore this message. Otherwise you can easily prevent the expiration by logging in with %%loginMethod%% to %%serviceAddress%% before the expiration date."
+account_expiration_body = "Dear %%firstname%%! Your account, which contains your favourite lists and saved searches, is about to expire at %%expirationDate%%. If you don't use this account, you can ignore this message. Otherwise you can easily prevent the expiration by logging in with %%loginMethod%% to %%serviceAddress%% before the expiration date."
+account_expiration_login_method_database = "your Finna ID"
+account_expiration_login_method_multiils = "your library card"
+account_expiration_login_method_shibboleth = "HAKA login"
 account_expiration_subject = "Your account with %%serviceAddress%% will expire on %%expirationDate%%"
 Actions = "Actions"
 Active filters = "Active filters"
